practica/yacc.output
State 166 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 $@1: %empty

    2 Programa: $@1 PRINCIPAL bloque

    3 $@2: %empty

    4 $@3: %empty

    5 $@4: %empty

    6 bloque: INICIO_BLOQUE $@2 $@3 Declar_de_variables_locales Declar_de_subprogs Sentencias FIN_BLOQUE $@4

    7 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    8                   | %empty

    9 $@5: %empty

   10 $@6: %empty

   11 Declar_subprog: $@5 Cabecera_subprograma $@6 bloque

   12 $@7: %empty

   13 $@8: %empty

   14 $@9: %empty

   15 Declar_de_variables_locales: $@7 INIVAR $@8 Variables_locales FINVAR $@9
   16                            | %empty

   17 Variables_locales: Variables_locales Cuerpo_declar_variables
   18                  | Cuerpo_declar_variables

   19 $@10: %empty

   20 $@11: %empty

   21 Cuerpo_declar_variables: TIPO_BASICO $@10 $@11 Lista_de_variables PUNTO_Y_COMA
   22                        | error

   23 Lista_de_variables: Lista_de_variables COMA variable
   24                   | variable

   25 variable: ID
   26         | ID ABRE_CORCHETE CONST_ENTERO_SIN_SIGNO CIERRA_CORCHETE
   27         | ID ABRE_CORCHETE CONST_ENTERO_SIN_SIGNO CIERRA_CORCHETE ABRE_CORCHETE CONST_ENTERO_SIN_SIGNO CIERRA_CORCHETE

   28 var_array: ID
   29          | ID ABRE_CORCHETE expresion CIERRA_CORCHETE
   30          | ID ABRE_CORCHETE expresion CIERRA_CORCHETE ABRE_CORCHETE expresion CIERRA_CORCHETE

   31 $@12: %empty

   32 $@13: %empty

   33 Cabecera_subprograma: TIPO_BASICO ID $@12 $@13 ABRE_PARENTESIS Cabecera_subprograma_2

   34 $@14: %empty

   35 Cabecera_subprograma_2: Lista_de_parametros CIERRA_PARENTESIS $@14
   36                       | CIERRA_PARENTESIS

   37 Lista_de_parametros: Lista_de_parametros COMA TIPO_BASICO variable
   38                    | TIPO_BASICO variable
   39                    | error

   40 $@15: %empty

   41 Sentencias: Sentencias $@15 Sentencia

   42 $@16: %empty

   43 Sentencias: $@16 Sentencia

   44 Sentencia: bloque
   45          | sentencia_asignacion
   46          | sentencia_hacer_hasta
   47          | sentencia_condicion
   48          | sentencia_mientras
   49          | sentencia_entrada
   50          | sentencia_salida
   51          | sentencia_devolver

   52 @17: %empty

   53 $@18: %empty

   54 sentencia_asignacion: var_array OP_ASIG @17 expresion PUNTO_Y_COMA $@18

   55 $@19: %empty

   56 sentencia_hacer_hasta: HACER $@19 Sentencia HASTA ABRE_PARENTESIS expresion CIERRA_PARENTESIS PUNTO_Y_COMA

   57 $@20: %empty

   58 $@21: %empty

   59 sentencia_mientras: MIENTRAS ABRE_PARENTESIS $@20 expresion CIERRA_PARENTESIS $@21 Sentencia

   60 $@22: %empty

   61 $@23: %empty

   62 sentencia_condicion: SI $@22 ABRE_PARENTESIS expresion $@23 sentencia_condicion_interior

   63 sentencia_condicion_interior: CIERRA_PARENTESIS ENTONCES Sentencia

   64 $@24: %empty

   65 sentencia_condicion_interior: CIERRA_PARENTESIS ENTONCES Sentencia SI_NO $@24 Sentencia

   66 $@25: %empty

   67 sentencia_entrada: ESCANEAR $@25 Lista_de_variables PUNTO_Y_COMA

   68 $@26: %empty

   69 $@27: %empty

   70 sentencia_salida: IMPRIMIR $@26 lista_expresiones_cadena PUNTO_Y_COMA $@27

   71 @28: %empty

   72 sentencia_devolver: DEVOLVER expresion @28 PUNTO_Y_COMA

   73 expresion: ABRE_PARENTESIS expresion CIERRA_PARENTESIS
   74          | OP_UNARIO expresion
   75          | OP_SIGNO expresion
   76          | expresion OP_OR expresion
   77          | expresion OP_AND expresion
   78          | expresion OP_XOR expresion
   79          | expresion OP_IGUALDAD expresion
   80          | expresion OP_RELACION expresion
   81          | expresion OP_MULT expresion
   82          | expresion OP_SIGNO expresion
   83          | var_array
   84          | constante
   85          | funcion
   86          | error

   87 lista_expresiones: lista_expresiones COMA expresion
   88                  | expresion
   89                  | %empty

   90 lista_expresiones_cadena: lista_expresiones_cadena COMA exp_cad
   91                         | exp_cad

   92 exp_cad: expresion
   93        | CADENA

   94 constante: CONST_ENTERO_SIN_SIGNO
   95          | CONST_LOGICA
   96          | CONST_FLOTANTE
   97          | CONST_CARACTER
   98          | const_matriz

   99 const_matriz: INICIO_BLOQUE lista_tipos_basicos FIN_BLOQUE

  100 lista_tipos_basicos: lista_tipos_basicos COMA constante
  101                    | constante

  102 $@29: %empty

  103 funcion: ID $@29 ABRE_PARENTESIS lista_expresiones CIERRA_PARENTESIS


Terminals, with rules where they appear

$end (0) 0
error (256) 22 39 86
OP_OR (258) 76
OP_AND (259) 77
OP_XOR (260) 78
OP_IGUALDAD (261) 79
OP_RELACION (262) 80
OP_SIGNO (263) 75 82
OP_MULT (264) 81
OP_UNARIO (265) 74
COMA (266) 23 37 87 90 100
PUNTO_Y_COMA (267) 21 54 56 67 70 72
CONST_LOGICA (268) 95
CONST_CARACTER (269) 97
CONST_FLOTANTE (270) 96
INIVAR (271) 15
FINVAR (272) 15
PRINCIPAL (273) 2
INICIO_BLOQUE (274) 6 99
FIN_BLOQUE (275) 6 99
TIPO_BASICO (276) 21 33 37 38
ABRE_CORCHETE (277) 26 27 29 30
CIERRA_CORCHETE (278) 26 27 29 30
ID (279) 25 26 27 28 29 30 33 103
CONST_ENTERO_SIN_SIGNO (280) 26 27 94
HACER (281) 56
HASTA (282) 56
SI (283) 62
ENTONCES (284) 63 65
SI_NO (285) 65
MIENTRAS (286) 59
ESCANEAR (287) 67
IMPRIMIR (288) 70
DEVOLVER (289) 72
CADENA (290) 93
ABRE_PARENTESIS (291) 33 56 59 62 73 103
CIERRA_PARENTESIS (292) 35 36 56 59 63 65 73 103
OP_ASIG (293) 54


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Programa (40)
    on left: 2, on right: 0
$@1 (41)
    on left: 1, on right: 2
bloque (42)
    on left: 6, on right: 2 11 44
$@2 (43)
    on left: 3, on right: 6
$@3 (44)
    on left: 4, on right: 6
$@4 (45)
    on left: 5, on right: 6
Declar_de_subprogs (46)
    on left: 7 8, on right: 6 7
Declar_subprog (47)
    on left: 11, on right: 7
$@5 (48)
    on left: 9, on right: 11
$@6 (49)
    on left: 10, on right: 11
Declar_de_variables_locales (50)
    on left: 15 16, on right: 6
$@7 (51)
    on left: 12, on right: 15
$@8 (52)
    on left: 13, on right: 15
$@9 (53)
    on left: 14, on right: 15
Variables_locales (54)
    on left: 17 18, on right: 15 17
Cuerpo_declar_variables (55)
    on left: 21 22, on right: 17 18
$@10 (56)
    on left: 19, on right: 21
$@11 (57)
    on left: 20, on right: 21
Lista_de_variables (58)
    on left: 23 24, on right: 21 23 67
variable (59)
    on left: 25 26 27, on right: 23 24 37 38
var_array (60)
    on left: 28 29 30, on right: 54 83
Cabecera_subprograma (61)
    on left: 33, on right: 11
$@12 (62)
    on left: 31, on right: 33
$@13 (63)
    on left: 32, on right: 33
Cabecera_subprograma_2 (64)
    on left: 35 36, on right: 33
$@14 (65)
    on left: 34, on right: 35
Lista_de_parametros (66)
    on left: 37 38 39, on right: 35 37
Sentencias (67)
    on left: 41 43, on right: 6 41
$@15 (68)
    on left: 40, on right: 41
$@16 (69)
    on left: 42, on right: 43
Sentencia (70)
    on left: 44 45 46 47 48 49 50 51, on right: 41 43 56 59 63 65
sentencia_asignacion (71)
    on left: 54, on right: 45
@17 (72)
    on left: 52, on right: 54
$@18 (73)
    on left: 53, on right: 54
sentencia_hacer_hasta (74)
    on left: 56, on right: 46
$@19 (75)
    on left: 55, on right: 56
sentencia_mientras (76)
    on left: 59, on right: 48
$@20 (77)
    on left: 57, on right: 59
$@21 (78)
    on left: 58, on right: 59
sentencia_condicion (79)
    on left: 62, on right: 47
$@22 (80)
    on left: 60, on right: 62
$@23 (81)
    on left: 61, on right: 62
sentencia_condicion_interior (82)
    on left: 63 65, on right: 62
$@24 (83)
    on left: 64, on right: 65
sentencia_entrada (84)
    on left: 67, on right: 49
$@25 (85)
    on left: 66, on right: 67
sentencia_salida (86)
    on left: 70, on right: 50
$@26 (87)
    on left: 68, on right: 70
$@27 (88)
    on left: 69, on right: 70
sentencia_devolver (89)
    on left: 72, on right: 51
@28 (90)
    on left: 71, on right: 72
expresion (91)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86, on right: 29
    30 54 56 59 62 72 73 74 75 76 77 78 79 80 81 82 87 88 92
lista_expresiones (92)
    on left: 87 88 89, on right: 87 103
lista_expresiones_cadena (93)
    on left: 90 91, on right: 70 90
exp_cad (94)
    on left: 92 93, on right: 90 91
constante (95)
    on left: 94 95 96 97 98, on right: 84 100 101
const_matriz (96)
    on left: 99, on right: 98
lista_tipos_basicos (97)
    on left: 100 101, on right: 99 100
funcion (98)
    on left: 103, on right: 85
$@29 (99)
    on left: 102, on right: 103


State 0

    0 $accept: . Programa $end

    $default  reduce using rule 1 ($@1)

    Programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: Programa . $end

    $end  shift, and go to state 3


State 2

    2 Programa: $@1 . PRINCIPAL bloque

    PRINCIPAL  shift, and go to state 4


State 3

    0 $accept: Programa $end .

    $default  accept


State 4

    2 Programa: $@1 PRINCIPAL . bloque

    INICIO_BLOQUE  shift, and go to state 5

    bloque  go to state 6


State 5

    6 bloque: INICIO_BLOQUE . $@2 $@3 Declar_de_variables_locales Declar_de_subprogs Sentencias FIN_BLOQUE $@4

    $default  reduce using rule 3 ($@2)

    $@2  go to state 7


State 6

    2 Programa: $@1 PRINCIPAL bloque .

    $default  reduce using rule 2 (Programa)


State 7

    6 bloque: INICIO_BLOQUE $@2 . $@3 Declar_de_variables_locales Declar_de_subprogs Sentencias FIN_BLOQUE $@4

    $default  reduce using rule 4 ($@3)

    $@3  go to state 8


State 8

    6 bloque: INICIO_BLOQUE $@2 $@3 . Declar_de_variables_locales Declar_de_subprogs Sentencias FIN_BLOQUE $@4

    INIVAR    reduce using rule 12 ($@7)
    $default  reduce using rule 16 (Declar_de_variables_locales)

    Declar_de_variables_locales  go to state 9
    $@7                          go to state 10


State 9

    6 bloque: INICIO_BLOQUE $@2 $@3 Declar_de_variables_locales . Declar_de_subprogs Sentencias FIN_BLOQUE $@4

    $default  reduce using rule 8 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 11


State 10

   15 Declar_de_variables_locales: $@7 . INIVAR $@8 Variables_locales FINVAR $@9

    INIVAR  shift, and go to state 12


State 11

    6 bloque: INICIO_BLOQUE $@2 $@3 Declar_de_variables_locales Declar_de_subprogs . Sentencias FIN_BLOQUE $@4
    7 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    TIPO_BASICO  reduce using rule 9 ($@5)
    $default     reduce using rule 42 ($@16)

    Declar_subprog  go to state 13
    $@5             go to state 14
    Sentencias      go to state 15
    $@16            go to state 16


State 12

   15 Declar_de_variables_locales: $@7 INIVAR . $@8 Variables_locales FINVAR $@9

    $default  reduce using rule 13 ($@8)

    $@8  go to state 17


State 13

    7 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 7 (Declar_de_subprogs)


State 14

   11 Declar_subprog: $@5 . Cabecera_subprograma $@6 bloque

    TIPO_BASICO  shift, and go to state 18

    Cabecera_subprograma  go to state 19


State 15

    6 bloque: INICIO_BLOQUE $@2 $@3 Declar_de_variables_locales Declar_de_subprogs Sentencias . FIN_BLOQUE $@4
   41 Sentencias: Sentencias . $@15 Sentencia

    FIN_BLOQUE  shift, and go to state 20

    $default  reduce using rule 40 ($@15)

    $@15  go to state 21


State 16

   43 Sentencias: $@16 . Sentencia

    INICIO_BLOQUE  shift, and go to state 5
    ID             shift, and go to state 22
    HACER          shift, and go to state 23
    SI             shift, and go to state 24
    MIENTRAS       shift, and go to state 25
    ESCANEAR       shift, and go to state 26
    IMPRIMIR       shift, and go to state 27
    DEVOLVER       shift, and go to state 28

    bloque                 go to state 29
    var_array              go to state 30
    Sentencia              go to state 31
    sentencia_asignacion   go to state 32
    sentencia_hacer_hasta  go to state 33
    sentencia_mientras     go to state 34
    sentencia_condicion    go to state 35
    sentencia_entrada      go to state 36
    sentencia_salida       go to state 37
    sentencia_devolver     go to state 38


State 17

   15 Declar_de_variables_locales: $@7 INIVAR $@8 . Variables_locales FINVAR $@9

    error        shift, and go to state 39
    TIPO_BASICO  shift, and go to state 40

    Variables_locales        go to state 41
    Cuerpo_declar_variables  go to state 42


State 18

   33 Cabecera_subprograma: TIPO_BASICO . ID $@12 $@13 ABRE_PARENTESIS Cabecera_subprograma_2

    ID  shift, and go to state 43


State 19

   11 Declar_subprog: $@5 Cabecera_subprograma . $@6 bloque

    $default  reduce using rule 10 ($@6)

    $@6  go to state 44


State 20

    6 bloque: INICIO_BLOQUE $@2 $@3 Declar_de_variables_locales Declar_de_subprogs Sentencias FIN_BLOQUE . $@4

    $default  reduce using rule 5 ($@4)

    $@4  go to state 45


State 21

   41 Sentencias: Sentencias $@15 . Sentencia

    INICIO_BLOQUE  shift, and go to state 5
    ID             shift, and go to state 22
    HACER          shift, and go to state 23
    SI             shift, and go to state 24
    MIENTRAS       shift, and go to state 25
    ESCANEAR       shift, and go to state 26
    IMPRIMIR       shift, and go to state 27
    DEVOLVER       shift, and go to state 28

    bloque                 go to state 29
    var_array              go to state 30
    Sentencia              go to state 46
    sentencia_asignacion   go to state 32
    sentencia_hacer_hasta  go to state 33
    sentencia_mientras     go to state 34
    sentencia_condicion    go to state 35
    sentencia_entrada      go to state 36
    sentencia_salida       go to state 37
    sentencia_devolver     go to state 38


State 22

   28 var_array: ID .
   29          | ID . ABRE_CORCHETE expresion CIERRA_CORCHETE
   30          | ID . ABRE_CORCHETE expresion CIERRA_CORCHETE ABRE_CORCHETE expresion CIERRA_CORCHETE

    ABRE_CORCHETE  shift, and go to state 47

    $default  reduce using rule 28 (var_array)


State 23

   56 sentencia_hacer_hasta: HACER . $@19 Sentencia HASTA ABRE_PARENTESIS expresion CIERRA_PARENTESIS PUNTO_Y_COMA

    $default  reduce using rule 55 ($@19)

    $@19  go to state 48


State 24

   62 sentencia_condicion: SI . $@22 ABRE_PARENTESIS expresion $@23 sentencia_condicion_interior

    $default  reduce using rule 60 ($@22)

    $@22  go to state 49


State 25

   59 sentencia_mientras: MIENTRAS . ABRE_PARENTESIS $@20 expresion CIERRA_PARENTESIS $@21 Sentencia

    ABRE_PARENTESIS  shift, and go to state 50


State 26

   67 sentencia_entrada: ESCANEAR . $@25 Lista_de_variables PUNTO_Y_COMA

    $default  reduce using rule 66 ($@25)

    $@25  go to state 51


State 27

   70 sentencia_salida: IMPRIMIR . $@26 lista_expresiones_cadena PUNTO_Y_COMA $@27

    $default  reduce using rule 68 ($@26)

    $@26  go to state 52


State 28

   72 sentencia_devolver: DEVOLVER . expresion @28 PUNTO_Y_COMA

    error                   shift, and go to state 53
    OP_SIGNO                shift, and go to state 54
    OP_UNARIO               shift, and go to state 55
    CONST_LOGICA            shift, and go to state 56
    CONST_CARACTER          shift, and go to state 57
    CONST_FLOTANTE          shift, and go to state 58
    INICIO_BLOQUE           shift, and go to state 59
    ID                      shift, and go to state 60
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 61
    ABRE_PARENTESIS         shift, and go to state 62

    var_array     go to state 63
    expresion     go to state 64
    constante     go to state 65
    const_matriz  go to state 66
    funcion       go to state 67


State 29

   44 Sentencia: bloque .

    $default  reduce using rule 44 (Sentencia)


State 30

   54 sentencia_asignacion: var_array . OP_ASIG @17 expresion PUNTO_Y_COMA $@18

    OP_ASIG  shift, and go to state 68


State 31

   43 Sentencias: $@16 Sentencia .

    $default  reduce using rule 43 (Sentencias)


State 32

   45 Sentencia: sentencia_asignacion .

    $default  reduce using rule 45 (Sentencia)


State 33

   46 Sentencia: sentencia_hacer_hasta .

    $default  reduce using rule 46 (Sentencia)


State 34

   48 Sentencia: sentencia_mientras .

    $default  reduce using rule 48 (Sentencia)


State 35

   47 Sentencia: sentencia_condicion .

    $default  reduce using rule 47 (Sentencia)


State 36

   49 Sentencia: sentencia_entrada .

    $default  reduce using rule 49 (Sentencia)


State 37

   50 Sentencia: sentencia_salida .

    $default  reduce using rule 50 (Sentencia)


State 38

   51 Sentencia: sentencia_devolver .

    $default  reduce using rule 51 (Sentencia)


State 39

   22 Cuerpo_declar_variables: error .

    $default  reduce using rule 22 (Cuerpo_declar_variables)


State 40

   21 Cuerpo_declar_variables: TIPO_BASICO . $@10 $@11 Lista_de_variables PUNTO_Y_COMA

    $default  reduce using rule 19 ($@10)

    $@10  go to state 69


State 41

   15 Declar_de_variables_locales: $@7 INIVAR $@8 Variables_locales . FINVAR $@9
   17 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error        shift, and go to state 39
    FINVAR       shift, and go to state 70
    TIPO_BASICO  shift, and go to state 40

    Cuerpo_declar_variables  go to state 71


State 42

   18 Variables_locales: Cuerpo_declar_variables .

    $default  reduce using rule 18 (Variables_locales)


State 43

   33 Cabecera_subprograma: TIPO_BASICO ID . $@12 $@13 ABRE_PARENTESIS Cabecera_subprograma_2

    $default  reduce using rule 31 ($@12)

    $@12  go to state 72


State 44

   11 Declar_subprog: $@5 Cabecera_subprograma $@6 . bloque

    INICIO_BLOQUE  shift, and go to state 5

    bloque  go to state 73


State 45
